<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
      <groupId>org.alfresco</groupId>
      <artifactId>alfresco-super-pom</artifactId>
      <version>8</version>
   </parent>
   <groupId>search-analytics-e2e-test</groupId>
   <artifactId>search-analytics-e2e-test</artifactId>
   <name>Search Analytics E2E Tests</name>
   <description>Test Project to test Search Service and Analytics Features on a complete setup of Alfresco, Share</description>
   <properties>
      <tas.rest.api.version>6.0.0.1</tas.rest.api.version>
      <tas.cmis.api.version>6.0.0.0</tas.cmis.api.version>
      <tas.utility.version>2.0.1</tas.utility.version>
      <rm.version>2.6.0</rm.version>
      <suiteXmlFile>src/test/resources/SearchSuite.xml</suiteXmlFile>
      <test.exclude></test.exclude>
      <test.include></test.include>
      <java.version>11</java.version>
      <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
   </properties>
   <build>
      <plugins>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>${maven-compiler-plugin.version}</version>
            <configuration>
                    <release>${java.version}</release>                    
                    <showWarnings>true</showWarnings>
                    <showDeprecation>true</showDeprecation>                    
                </configuration>
         </plugin>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <configuration>
               <suiteXmlFiles>
                  <suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
               </suiteXmlFiles>
               <excludedGroups>${test.exclude}</excludedGroups>
               <groups>${test.include}</groups>
            </configuration>
         </plugin>
      </plugins>
   </build>
   <dependencies>
      <dependency>
         <groupId>org.alfresco.tas</groupId>
         <artifactId>restapi-test</artifactId>
         <version>${tas.rest.api.version}</version>
         <scope>test</scope>
      </dependency>
      <dependency>
         <groupId>org.alfresco.tas</groupId>
         <artifactId>cmis-test</artifactId>
         <version>${tas.cmis.api.version}</version>
         <scope>test</scope>
      </dependency>
      <dependency>
         <groupId>org.alfresco</groupId>
         <artifactId>alfresco-rm-automation-enterprise-rest-api</artifactId>
         <version>${rm.version}</version>
         <scope>test</scope>
      </dependency>
      <dependency>
         <groupId>org.alfresco</groupId>
         <artifactId>alfresco-rm-automation-community-rest-api</artifactId>
         <version>${rm.version}</version>
         <classifier>tests</classifier>
         <scope>test</scope>
      </dependency>
        <!-- alfresco tester settings -->
        <dependency>
            <groupId>org.alfresco.tas</groupId>
            <artifactId>utility</artifactId>
            <version>${tas.utility.version}</version>
            <exclusions>
                <exclusion>
                    <artifactId>slf4j-api</artifactId>
                    <groupId>org.slf4j</groupId>
                </exclusion>
                <exclusion>
                    <groupId>junit</groupId>
                    <artifactId>junit</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
      <dependency>
         <groupId>org.projectlombok</groupId>
         <artifactId>lombok</artifactId>
         <version>1.18.4</version>
         <scope>test</scope>
      </dependency>
      <dependency>
           <groupId>org.openjfx</groupId>
           <artifactId>javafx-fxml</artifactId>
           <version>12-ea+10</version>
       </dependency>
   </dependencies>
</project>